--- a/README.textile
+++ b/README.textile
@@ -8,6 +8,6 @@ h2. Aehnliche Projekte
 
 Fuer Ruby gibt es "OpenGDV":https://github.com/vendis/opengdv/, einer Open-Source-Bibliothek, die unter der MIT-License steht.
 
-h2. eitere Infos
+h2. Weitere Infos
 
 Im "Wiki":https://github.com/oboehm/gdv.xport/wiki ist alles Wichtige zu gdv.xport zusammengefasst.
