--- a/README.textile
+++ b/README.textile
@@ -15,17 +15,8 @@ Fuer Ruby gibt es "OpenGDV":https://github.com/vendis/opengdv/, einer Open-Sourc
 
 h2. Weitere Infos
 
-
-h3. Build
-
-Der CI-Build erfolgt auf http://miniserver07:8280 - dieser Jenkins-Server ist
-aber nicht ueber das Internet erreichbar. Deswegen gibt es unter
-
-    https://travis-ci.org/oboehm/gdv.xport
-
-einen weiteren (experimentellen) Build.
-
-
-h3. Sonstiges
-
 Im "Wiki":https://github.com/oboehm/gdv.xport/wiki ist alles Wichtige zu gdv.xport zusammengefasst. Weitere Infos wie z.B. die "JavaDocs":http://www.aosd.de/gdv.xport/apidocs/index.html finden Sie auch auf der "Maven Projekt-Seite":http://www.aosd.de/gdv.xport/ .
+
+* CI-Build: https://travis-ci.org/oboehm/gdv.xport
+* Wiki: https://github.com/oboehm/gdv.xport/wiki
+* Projekt-Seite: http://www.aosd.de/gdv.xport/
