--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,5 @@
+!https://api.travis-ci.org/oboehm/gdv.xport.svg?branch=develop/2.0(Build Status)!:https://travis-ci.org/oboehm/gdv.xport !https://img.shields.io/badge/license-Apache%202.0-blue.svg(Apache License 2.0)!:http://www.apache.org/licenses/LICENSE-2.0.html
+
 h1. Was ist gdv.xport?
 
 
