--- a/doc/deployment.adoc
+++ b/doc/deployment.adoc
@@ -14,14 +14,21 @@ Kommandos nötig:
 
 ----
 heroku login
+heroku git:remote -a gdv-xport-300
 git push heroku feature/spring-boot:master
 ----
 
 Damit wird dieser Branch auf den Heroku-Master-Branch geschoben, da Heroku
 nur auf diesem Branch automatisch baut.
 
-== Anwendung stoppen
+== Anwendung starten / stoppen
 
+Anwendung starten:
+----
+heroku ps:scale web=1
+----
+
+Anwendung stoppen:
 ----
 heroku ps:scale web=0
 ----
