--- a/README.textile
+++ b/README.textile
@@ -3,34 +3,51 @@
 h1. Was ist gdv.xport?
 
 gdv.xport ist als Java-Bibliothek gestartet, die den Umgang mit dem GDV-Format erleichtert.
-Das "x" in port steht fur "im"- und "ex"-port. Die Bibliothek ist Open Source und steht unter der Apache License.
+ Das "x" in port steht fur "im"- und "ex"-port. Die Bibliothek ist Open Source und steht unter der Apache License.
 
-Ab 2018 ist eine Version 3.0 ist geplant, mit der diese Bibliothek um einen Service fuer Dateien im GDV-Format erweitert wird.
-Die einzelnen Module sind:
+Mit Version 3.0 gibt es neben dieser Bibliothek auch REST-Services fuer Dateien im GDV-Format.
+ Die einzelnen Module sind:
 
-* *lib*: gdv.xport als Java-Bibliothek
-* *service*: gdv.xport-Services (Spring-Boot-Anwendung)
+* *gdv-xport-lib*: gdv.xport als Java-Bibliothek
+* *gdv-xport-service*: gdv.xport-Services (Spring-Boot-Anwendung)
+
+
+
+h2. Kompatibilitaet von v2 zu v3
+
+Waehrend Version 2 auf der 2013er-Version der XML-Datei von "gdv-online":http://www.gdv-online.de/vuvm/index.htm basiert,
+ wurde Version 3 auf die aktuelle Version von 2015 aktualisiert.
+ Diese Aenderungen sind aber abwaertskompatibel.
+ Allerdings wurde mit der Aktualisierung auch die Bezeichner-Klasse ueberarbeitet:
+
+* die String-Konstanten "NAME_xxx", die als _@Deprecated_ waren, wurden entfernt,
+* die Bezeichner-Konstanten wurden geprueft, Schreibfehler entfernt und doppelte Eintraege entfernt,
+* verwaiste Konstanten, die in der XML-Datei nicht vorhanden sind, wurden entfernt.
+
+Dadurch kann es sein, dass manche Konstanten irrtuemlich geloescht wurden.
+ Sollte dies der Fall sein, ein "Issue":https://github.com/oboehm/gdv.xport/issues/ erstellen.
+ Man kann natuerlich auch die Konstanten in seiner Anwendung selber definieren.
 
 
 
 h2. Aehnliche Projekte
 
 Fuer Ruby gibt es "OpenGDV":https://github.com/vendis/opengdv/, einer Open-Source-Bibliothek, die unter der MIT-License steht.
-Allerdings wurde diese Bibliothek schon seit laengerer Zeit nicht mehr aktualisiert.
+ Allerdings wurde diese Bibliothek schon seit laengerer Zeit nicht mehr aktualisiert.
 
 
 
 h2. GIT Branching-Modell
 
 Entwickelt wird nach "A successful Git branching model":http://nvie.com/posts/a-successful-git-branching-model/ von Vincent Driessen.
-Die Weiterentwicklung der aktuellen Version findet auf dem develop-Branch statt (derzeit: "develop/2.1":https://github.com/oboehm/gdv.xport/tree/develop/2.1), waehrend das letzte Release im Release-Zweig (derzeit: "release/2.1":https://github.com/oboehm/gdv.xport/tree/release/2.1) zu finden ist.
+ Die Weiterentwicklung der aktuellen Version findet auf dem develop-Branch statt (derzeit: "develop/3.x":https://github.com/oboehm/gdv.xport/tree/develop/3.x), waehrend das letzte Release im Release-Zweig (derzeit: "release/3.x":https://github.com/oboehm/gdv.xport/tree/release/3.x) zu finden ist.
 
 
 
 h2. Weitere Infos
 
 Im "Wiki":https://github.com/oboehm/gdv.xport/wiki ist alles Wichtige zu gdv.xport zusammengefasst.
-Weitere Infos wie z.B. die "JavaDocs":http://www.aosd.de/gdv.xport/apidocs/index.html finden Sie auch auf der "Maven Projekt-Seite":http://www.aosd.de/gdv.xport/ .
+ Weitere Infos wie z.B. die "JavaDocs":http://www.aosd.de/gdv.xport/apidocs/index.html finden Sie auch auf der "Maven Projekt-Seite":http://www.aosd.de/gdv.xport/ .
 
 * CI-Build: https://travis-ci.org/oboehm/gdv.xport
 * Wiki: https://github.com/oboehm/gdv.xport/wiki
