--- a/README.adoc
+++ b/README.adoc
@@ -13,25 +13,8 @@ Das "x" in port steht fur "im"- und "ex"-port. Die Bibliothek ist Open Source un
 Mit Version 3.0 gibt es neben dieser Bibliothek auch REST-Services fuer Dateien im GDV-Format. 
 Die einzelnen Module sind: 
 
-* *gdv-xport-lib*: gdv.xport als Java-Bibliothek
-* *gdv-xport-service*: gdv.xport-Services (Spring-Boot-Anwendung)
-
-
-
-== Kompatibilitaet von v2 zu v3
-
-Waehrend Version 2 auf der 2013er-Version der XML-Datei von http://www.gdv-online.de/vuvm/index.htm[gdv-online] basiert,
-wurde Version 3 auf die aktuelle Version von 2015 aktualisiert.
-Diese Aenderungen sind aber abwaertskompatibel.
-Allerdings wurde mit der Aktualisierung auch die Bezeichner-Klasse ueberarbeitet:
-
-* die String-Konstanten "NAME_xxx", die als _@Deprecated_ waren, wurden entfernt,
-* die Bezeichner-Konstanten wurden geprueft, Schreibfehler entfernt und doppelte Eintraege entfernt,
-* verwaiste Konstanten, die in der XML-Datei nicht vorhanden sind, wurden entfernt.
-
-Dadurch kann es sein, dass manche Konstanten irrtuemlich geloescht wurden.
-Sollte dies der Fall sein, ein https://github.com/oboehm/gdv.xport/issues/[Issue] erstellen.
-Man kann natuerlich auch die Konstanten in seiner Anwendung selber definieren.
+* link:lib/[*gdv-xport-lib*]: gdv.xport als Java-Bibliothek
+* link:service/[*gdv-xport-service*]: gdv.xport-Services (Spring-Boot-Anwendung)
 
 
 
