--- a/doc/release-notes.adoc
+++ b/doc/release-notes.adoc
@@ -7,7 +7,7 @@
 * Aktualisierung auf die aktuelle XML-Version von 2018.
 * Bezeichner-Klasse wurde aufgeräumt und falsche bzw. nicht benötigte Konstanten entfernt.
   Ebenso wurden manche Konstanten ind den Feld-Beschreibungen korrigiert.
-* #_neu_#: es gibt ein neues Modulu 'gdv-xport-deprecated', in der Klassen und Enumerationen verschoben wurden, die 'deprecated' sind.
+* #_neu_#: es gibt ein neues Modul 'gdv-xport-deprecated', in der Klassen und Enumerationen verschoben wurden, die 'deprecated' sind.
   Dieses Abhängigkeit nicht nur dann benötigt, wenn man noch einer dieser Klassen verwendet
 * #_geplant_#: Performance-Optimierung und Verringerund des Speicher-Abdrucks (Footprint).
 * Komplexität mancher Methoden reduziert
