--- a/doc/release-notes.adoc
+++ b/doc/release-notes.adoc
@@ -4,11 +4,11 @@
 
 == 4.1 (in Planung)
 
-* Performance-Optimierung und Verringerund des Speicher-Abdrucks (Footprint).
+* Performance-Optimierung und Verringerung des Speicher-Abdrucks (Footprint).
 
 
 
-== 4.0 (kommt noch)
+== 4.0 (Jan-2019)
 
 * Aktualisierung auf die aktuelle XML-Version von 2018.
 * Bezeichner-Klasse wurde aufgeräumt und falsche bzw. nicht benötigte Konstanten entfernt.
