--- a/doc/release-notes.adoc
+++ b/doc/release-notes.adoc
@@ -16,7 +16,8 @@
 * #_neu_#: es gibt ein neues Modul 'gdv-xport-deprecated', in der Klassen und Enumerationen verschoben wurden, die 'deprecated' sind.
   Dieses Abhängigkeit wird nur dann benötigt, wenn man noch einer dieser Klassen verwendet
 * Komplexität reduziert
-* Umstellung auf Java 8 
+* Umstellung auf Java 8
+* Umstellung REST-Services auf Spring-Boot 2
 
 
 
