--- a/doc/release-notes.adoc
+++ b/doc/release-notes.adoc
@@ -7,6 +7,11 @@
 * Performance-Optimierung und Verringerung des Speicher-Abdrucks (Footprint).
 
 
+== 4.0.3 (16-Feb-2019)
+
+* _fixed_: Umlaut-Problem und fehlerhafter XML-Header
+  (https://github.com/oboehm/gdv.xport/issues/37[Issue #37])
+
 == 4.0.2 (14-Feb-2019)
 
 * _fixed_: Start-Probleme mit Uberjar
