--- a/doc/README.adoc
+++ b/doc/README.adoc
@@ -1,6 +1,6 @@
 https://travis-ci.org/oboehm/gdv.xport[image:https://api.travis-ci.org/oboehm/gdv.xport.svg[BuildStatus]]
 https://github.com/oboehm/gdv.xport/issues[image:https://img.shields.io/github/issues/oboehm/gdv.xport.svg[Issues]]
-https://sonarcloud.io/dashboard?id=com.github.oboehm%3Agdv-xport%3Adevelop%2F4.x[image:https://sonarcloud.io/api/project_badges/measure?metric=alert_status&project=com.github.oboehm:gdv-xport[Quality Gate]]
+https://sonarcloud.io/dashboard?id=com.github.oboehm%3Agdv-xport[image:https://sonarcloud.io/api/project_badges/measure?metric=alert_status&project=com.github.oboehm:gdv-xport[Quality Gate]]
 https://coveralls.io/github/oboehm/gdv.xport[image:https://coveralls.io/repos/github/oboehm/gdv.xport/badge.svg[Coverage Status]]
 
 
@@ -45,9 +45,9 @@ Auf diese Weise sind schon viele Erweiterungen und Korrekturen in gdv.xport eing
 
 == Regeln für Pull-Requests
 
-- Bitte auf dem develop-Branch (aktuell: `develop/4.x`) arbeiten und dafür den Pull-Request erstellen.
+- Bitte auf dem develop-Branch (`develop`) arbeiten und dafür den Pull-Request erstellen.
   Wird auf dem master-Branch gearbeitet, bringt dies das ganze 
-  https://nvie.com/posts/a-successful-git-branching-model/[GitFlow-Modell] durcheinander, nachdem hier entwickelt wird.
+  https://nvie.com/posts/a-successful-git-branching-model/[GitFlow-Modell] durcheinander.
 - Bitte die Prinzipien von https://de.wikipedia.org/wiki/Clean_Code[Clean Code] beachten.
 - Bitte die Tests nicht vergessen und darauf achten, dass alle Tests grün sind.
 - Es liegt keine Lizenz-Verletzung vor und die Änderungen und Erweiterungen des Codes stehen ebenfalls unter der Apache-Lizenz.
