--- a/doc/build.adoc
+++ b/doc/build.adoc
@@ -11,7 +11,7 @@
 
 |https://sonarcloud.io/projects[sonarcloud.io]
 |https://sonarcloud.io/dashboard?id=com.github.oboehm%3Agdv-xport%3Amaster[image:https://sonarcloud.io/api/project_badges/measure?metric=alert_status&project=com.github.oboehm:gdv-xport[Quality Gate]]
-|https://sonarcloud.io/dashboard?id=com.github.oboehm%3Agdv-xport%3Adevelop%2F4.x[image:https://sonarcloud.io/api/project_badges/measure?metric=alert_status&project=com.github.oboehm:gdv-xport:develop%2F4.x[Quality Gate]]
+|https://sonarcloud.io/dashboard?id=com.github.oboehm%3Agdv-xport[image:https://sonarcloud.io/api/project_badges/measure?metric=alert_status&project=com.github.oboehm:gdv-xport[Quality Gate]]
 |`sonar:sonar`
 
 |https://coveralls.io/github/oboehm/gdv.xport[CoverAlls.io]
