--- a/README.adoc
+++ b/README.adoc
@@ -38,7 +38,7 @@ Allerdings wurde diese Bibliothek schon seit laengerer Zeit nicht mehr aktualisi
 == GIT Branching-Modell
 
 Entwickelt wird nach http://nvie.com/posts/a-successful-git-branching-model/[A successful Git branching model] von Vincent Driessen.
-Die Weiterentwicklung der aktuellen Version findet auf dem develop-Branch statt, waehrend das letzte Release im Release-Zweig (derzeit: https://github.com/oboehm/gdv.xport/tree/release/4.x[release/4.x]) zu finden ist.
+Die Weiterentwicklung der aktuellen Version findet auf dem https://github.com/oboehm/gdv.xport/tree/develop[develop]-Branch statt, waehrend das letzte Release im Release-Zweig (derzeit: https://github.com/oboehm/gdv.xport/tree/release/4.x[release/4.x]) zu finden ist.
 
 
 
