--- a/README.adoc
+++ b/README.adoc
@@ -35,6 +35,13 @@ Allerdings wurde diese Bibliothek schon seit laengerer Zeit nicht mehr aktualisi
 
 
 
+== image:https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Docker_%28container_engine%29_logo.svg/320px-Docker_%28container_engine%29_logo.svg.png[Docker]
+
+Ab Version 4.1 gibt es jetzt dank der Mithilfe von https://github.com/janjagusch[janjagusch] ein erstes link:Dockerfile[Dockerfile], mit dem sowohl die Anwendung gebaut, als auch im Container gestartet werden kann.
+Unter link:doc/build.adoc[doc/build.adoc] ist der Aufruf beschrieben.
+Auch der manuelle Bau der Anwendung ist dort beschrieben.
+
+
 == GIT Branching-Modell
 
 Entwickelt wird nach http://nvie.com/posts/a-successful-git-branching-model/[A successful Git branching model] von Vincent Driessen.
